cmake_minimum_required(VERSION 3.12)

project(server)

# this is needed to be able to use the protobuf_generate_cpp function
# because it is deprecated in the newer versions of the protobuf vcpkg
# package on windows.
if(WIN32)
  set(protobuf_MODULE_COMPATIBLE TRUE)
endif()

include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/asio/ )

add_definitions(-DASIO_STANDALONE)

# Get all the .proto files in the proto subdirectory
file(GLOB PROTO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/proto/*.proto")

# Find the protobuf package
find_package(Protobuf REQUIRED)

# Include the protobuf directory
include_directories(${Protobuf_INCLUDE_DIRS})
# include current directory so we can find generated protobuf files
include_directories(${CMAKE_CURRENT_BINARY_DIR})

if( APPLE )
  add_definitions(-std=c++11 -stdlib=libc++)
endif()

# generate the pb.h/pb.cc files
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})

add_subdirectory(src)

add_executable(${PROJECT_NAME} ${SRC_LIST} ${PROTO_SRCS} ${PROTO_HDRS})

# link to protobuf library
target_link_libraries(${PROJECT_NAME} ${Protobuf_LIBRARIES})